# tau

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
crates/libtau/: Cargo.toml
crates/libtau/src/: context.rs  lib.rs
crates/libtau/src/providers/: anthropic.rs  common.rs  mod.rs  openai.rs
crates/libtau/src/tools/: bash.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
crates/tau/: Cargo.toml
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: main.rs
crates/tau/src/: lib.rs  main.rs
