[package]
name = "libtau"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.52.1", features = ["rt"] }
